# my-project/storage/api-docs/api-docs.json
@@ -49,7 +49,7 @@
                 }
             }
         },
-        "/appointment/{id}": {
+        "/appointments/{id}": {
             "get": {
                 "tags": [
                     "rendez vous"
@@ -157,7 +157,7 @@
                 }
             }
         },
-        "/article/{id}": {
+        "/articles/{id}": {
             "get": {
                 "tags": [
                     "article"
@@ -265,7 +265,7 @@
                 }
             }
         },
-        "/brand/{id}": {
+        "/brands/{id}": {
             "get": {
                 "tags": [
                     "brand"
@@ -373,7 +373,7 @@
                 }
             }
         },
-        "/client/{id}": {
+        "/clients/{id}": {
             "get": {
                 "tags": [
                     "clients"
@@ -589,7 +589,7 @@
                 }
             }
         },
-        "/employee/{id}": {
+        "/employees/{id}": {
             "get": {
                 "tags": [
                     "employee"
@@ -697,7 +697,7 @@
                 }
             }
         },
-        "/energie/{id}": {
+        "/energies/{id}": {
             "get": {
                 "tags": [
                     "energie"
@@ -775,7 +775,7 @@
                 }
             }
         },
-        "/family-situation": {
+        "/family-situations": {
             "get": {
                 "tags": [
                     "situation familiale"
@@ -805,7 +805,7 @@
                 }
             }
         },
-        "/family-situation/{id}": {
+        "/family-situations/{id}": {
             "get": {
                 "tags": [
                     "situation familiale"
@@ -913,7 +913,7 @@
                 }
             }
         },
-        "/gearBoxe/{id}": {
+        "/gearBoxes/{id}": {
             "get": {
                 "tags": [
                     "gearBoxe"
@@ -1021,7 +1021,7 @@
                 }
             }
         },
-        "/leavingVehicule/{id}": {
+        "/leavingVehicules/{id}": {
             "get": {
                 "tags": [
                     "leavingVehicule"
@@ -1099,7 +1099,7 @@
                 }
             }
         },
-        "/leavingVehicule/client/{$clientId}": {
+        "/leavingVehicules/client/{$clientId}": {
             "get": {
                 "tags": [
                     "leavingVehicule"
@@ -1169,7 +1169,7 @@
                 }
             }
         },
-        "/media/{id}": {
+        "/medias/{id}": {
             "get": {
                 "tags": [
                     "media"
@@ -1277,7 +1277,7 @@
                 }
             }
         },
-        "/model/{id}": {
+        "/models/{id}": {
             "get": {
                 "tags": [
                     "model"
@@ -1355,7 +1355,7 @@
                 }
             }
         },
-        "/professional-situation": {
+        "/professional-situations": {
             "get": {
                 "tags": [
                     "situation professionnelle"
@@ -1385,7 +1385,7 @@
                 }
             }
         },
-        "/professional-situation/{id}": {
+        "/professional-situations/{id}": {
             "get": {
                 "tags": [
                     "situation professionnelle"
@@ -1493,7 +1493,7 @@
                 }
             }
         },
-        "/role/{id}": {
+        "/roles/{id}": {
             "get": {
                 "tags": [
                     "role"
@@ -1709,7 +1709,7 @@
                 }
             }
         },
-        "/subject/{id}": {
+        "/subjects/{id}": {
             "get": {
                 "tags": [
                     "subjects"
@@ -1817,7 +1817,7 @@
                 }
             }
         },
-        "/type/{id}": {
+        "/types/{id}": {
             "get": {
                 "tags": [
                     "type"
@@ -1925,7 +1925,7 @@
                 }
             }
         },
-        "/user/{id}": {
+        "/users/{id}": {
             "get": {
                 "tags": [
                     "user"
@@ -2033,7 +2033,7 @@
                 }
             }
         },
-        "/vehicule/{id}": {
+        "/vehicules/{id}": {
             "get": {
                 "tags": [
                     "vehicule"
